# ps5-tracker

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
ps5tracker/: __init__.py  cli.py  config.py  models.py  notifier.py  runner.py
scripts/: run_tracker.sh  setup.sh
